--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=admin
       - POSTGRES_DB=fastapi
+    ports:
+      - 5432:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -24,3 +26,25 @@ services:
       - ./tasks:/app
     ports:
       - 8001:8080
+    
+  users:
+    build: ./users
+    depends_on:
+      - tasks
+    env_file:
+      - ./.env
+    volumes:
+      - ./users:/app
+    ports:
+      - 8002:8080
+
+  auth:
+    build: ./auth
+    depends_on:
+      - tasks
+    env_file:
+      - ./.env
+    volumes:
+      - ./auth:/app
+    ports:
+      - 8003:8080
