--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY . /app
 
-CMD ["uvicorn", "server:app", "--reload", "--host", "0.0.0.0", "--port", "8080"]
+EXPOSE 8000
+
+CMD ["uvicorn", "server:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
