--- a/kubernetes/postgres.config.yml
+++ b/kubernetes/postgres.config.yml
@@ -5,6 +5,6 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: fastapi
-  POSTGRES_USER: admin
-  POSTGRES_PASSWORD: password
+  POSTGRES_DB: ''
+  POSTGRES_USER: ''
+  POSTGRES_PASSWORD: ''
